--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1754,16 +1754,16 @@ input, select, textarea {
 			width: 100%;
 		}
 
-		.image.avatar48 {
+		/* .image.avatar48 {
 			width: 48px;
 			height: 48px;
 			background: #f00;
-		}
+		} */
 
-			.image.avatar48 img {
+			/* .image.avatar48 img {
 				width: 48px;
 				height: 48px;
-			}
+			} */
 
 		.image.fit {
 			display: block;
@@ -2234,7 +2234,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../images/Banner.jpg");
 			}
 
 			#main > section.two {
