--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -24,9 +24,6 @@
 #aboutblock p{
   margin:0;
 }
-#about{
-  text-align:justify;
-}
 #photo1{
   width:100%;
 }
@@ -38,8 +35,50 @@
 }
 #guco{
   margin-left:300px;
+}
+.gucodescription{
   text-align:justify!important;
 }
-#gucodescription{
-  text-align:justify!important;
+/* .tayninhbutton{
+    margin-left: 393px;
+    background-color: transparent;
+    box-shadow: inset 0 0 0 2px #212931;
+    color: #212931 !important;
+    transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+    border: 0;
+  border-radius: 0;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 0.8rem;
+  font-weight: 900;
+  letter-spacing: 0.075em;
+  height: 3rem;
+  line-height: 3rem;
+  padding: 0 2rem;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+} */
+.tayninh{
+  text-align:justify;
+}
+#about{
+  text-align: justify!important;
+}
+.cip{
+  text-align: justify;
+}
+.quote{
+  text-align: justify;
+}
+.selfintro{
+  text-align: justify;
+}
+#skills{
+  text-align: justify!important;
+}
+.button{
+  margin-left:393px;
 }
