--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -241,16 +241,16 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 960px) {
-
+		/* @media screen and (max-width: 960px) { */
+		@media screen and (max-width: 600px) {
 			.container {
 				width: 100%;
 			}
 
 		}
 
-		@media screen and (max-width: 736px) {
-
+		/* @media screen and (max-width: 736px) { */
+		@media screen and (max-width: 600px) {
 			.container {
 				width: 100%;
 			}
