--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2248,6 +2248,10 @@ input, select, textarea {
 				background-color: #e8edec;
 			}
 
+			#main > section.five {
+				background-color: #e8edec;
+			}
+
 /* Wide */
 
 	@media screen and (min-width: 961px) and (max-width: 1880px) {
