--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -38,6 +38,10 @@
   margin-left:300px;
 }
 }
+@media screen and (max-width: 600px) {
+.aboutmecontainer{
+  width:100px;
+}
 .gucodescription{
   text-align:justify!important;
 }
