--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -98,6 +98,10 @@
   margin-left:393px!important;
 }
 @media screen and (max-width: 600px) {
+.button{
+  margin-left:100px!important;
+}
+@media screen and (max-width: 600px) {
 .four{
 width:100%!important;
 }
