--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -97,7 +97,10 @@
 .button{
   margin-left:393px!important;
 }
-
+@media screen and (max-width: 599px) {
+.button{
+  margin-left:200px!important;
+}
 @media screen and (max-width: 600px) {
 .four{
 width:100%!important;
