--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -66,6 +66,10 @@
 .four{
   text-align:justify!important;
 }
+@media screen and (max-width: 599px) {
+.button{
+  margin-left:200px!important;
+}
 @media screen and (min-width: 600px) {
 #guco{
   margin-left:300px;
@@ -97,10 +101,10 @@
 .button{
   margin-left:393px!important;
 }
-@media screen and (max-width: 599px) {
+/* @media screen and (max-width: 599px) {
 .button{
   margin-left:200px!important;
-}
+} */
 @media screen and (max-width: 600px) {
 .four{
 width:100%!important;
